objects/PC_System_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>PC_Document_Splitter_Class__c</fullName>
        <defaultValue>&apos;PC_DocumentSplitWebservice&apos;</defaultValue>
        <description>Implementation class of PC_Document.Splitter interface that calls external service to split a document attachment and creates new attachments on child documents.</description>
        <inlineHelpText>Fully qualified class name of the PC_Document.Splitter implementation that will be invoked when users split documents (typically inbound faxes). The implementing class and methods must declared as global if they are implemented outside of the PC package.</inlineHelpText>
        <label>Document Splitter Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Google_Map_Location_Radius__c</fullName>
        <label>Google Map Location Radius</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Google_Map_Radius_Is_KM__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Google Map Radius Is KM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Pharmacy_Card_Lookup_ID_Validity__c</fullName>
        <description>This holds the number of seconds the Pharmacy Card Lookup ID remains valid. This will be used to filter the PBM Plans that are listed in the Pharmacy Ebenefit Investigation workflow. If no value is provided, then it is assumed that the PBM Plans remain indefinitely valid.</description>
        <inlineHelpText>This holds the number of seconds the Pharmacy Card Lookup ID remains valid.</inlineHelpText>
        <label>Pharmacy Card Lookup Validity In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_eLetter_Sender_Class__c</fullName>
        <defaultValue>&apos;PC_eLetterEmailTemplateSender&apos;</defaultValue>
        <description>The class name of the PC_eLetter.Sender implementation that will be used to send eLetters. The .cls should not be included.</description>
        <label>eLetter Sender Class</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ePA_Class__c</fullName>
        <description>The class name of the PC_ePA.Client that will be used for ePA. .cls should not be included.</description>
        <label>ePA Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>System Settings</label>
</CustomObject>